--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,26 @@ h1 span {
   padding: 10px;
   background-color: black;
   text-align: center;
+  position: sticky;
+  top: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.navbar h3 {
+  color: white;
+}
+
+.navbar ul {
+  list-style: none;
+  padding-right: 20px;
+}
+
+.navbar ul li {
+  display: inline-block;
 }
 
 .navbar a {
@@ -28,6 +48,51 @@ h1 span {
   color: red;
 }
 
+.landing-image-container {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  z-index: -1;
+}
+
+.landing-image {
+  height: 100vh;
+  width: 100%;
+  object-fit: cover;
+}
+
+.landing-image-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.landing-image-overlay h1 {
+  color: white;
+}
+
+.tooltip-container {
+  position: fixed;
+  top: 50%;
+  right: 0;
+  padding: 10px;
+  background-color: red;
+}
+
+.tooltip-container:hover p {
+  display: block;
+}
+
+.tooltip-container p {
+  display: none;
+}
+
 .main-container {
   text-align: center;
 }
@@ -36,6 +101,19 @@ h1 span {
   display: flex;
   width: 70%;
   margin: 0 auto;
+}
+
+.fixed-height-wrapper {
+  height: 400px;
+  border: 2px solid red;
+  padding: 20px;
+  overflow: auto;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.fixed-height-wrapper p {
+  margin: 0;
 }
 
 .text-container {
@@ -60,6 +138,7 @@ h1 span {
 
 table {
   border-collapse: collapse;
+  margin-top: 20px;
 }
 
 table th,
@@ -67,6 +146,15 @@ table td {
   border: 1px solid black;
   padding: 10px;
   text-align: left;
+}
+
+table th {
+  background-color: red;
+  color: white;
+}
+
+tr:nth-child(odd) {
+  background-color: aqua;
 }
 
 .center-year {
